finished SoundWaveSimilarity